--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
    <meta name="theme-color" content="#000000" />
    <meta name="description" content="Web site created using create-react-app" />
    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500&display=swap" rel="stylesheet">
+
+   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+
    <title>Forex-change</title>
 </head>
 
