Updated file structure & redesign

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="theme-color" content="#000000" />
-   <meta name="description" content="Web site created using create-react-app" />
-   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500&display=swap" rel="stylesheet">
+   <meta name="description" content="forex-change website created by Saifur rahman" />
+   <link rel="preload" as="font" type="font/otf" crossorigin="anonymous" href="%PUBLIC_URL%/Sofia-pro-Medium.otf" />
 
-   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;500;600&display=swap" rel="stylesheet">
+   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
 
-   <title>Forex-change</title>
+   <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
+   <title>Forex-change | Made by Saifur rahman</title>
 </head>
 
 <body>
